--- a/app/src/main/res/layout-v26/activity_main.xml
+++ b/app/src/main/res/layout-v26/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="170dp"
         android:layout_marginBottom="188dp"
         android:text="@string/Addbutton"
+        android:onClick="add"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +31,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:autofillHints="" />
+        android:autofillHints=""
+        tools:ignore="LabelFor" />
 
     <EditText
         android:id="@+id/number2"
@@ -39,11 +41,12 @@
         android:layout_marginTop="21dp"
         android:layout_marginEnd="99dp"
         android:layout_marginBottom="32dp"
+        android:autofillHints=""
         android:ems="10"
         android:inputType="number"
         app:layout_constraintBottom_toTopOf="@+id/Add"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/number1"
         app:layout_constraintTop_toBottomOf="@+id/number1"
-        android:autofillHints="" />
+        tools:ignore="LabelFor" />
 </android.support.constraint.ConstraintLayout>
